--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@dataverse/runtime-connector": "1.0.59",
     "@dataverse/tableland-client-toolkit": "^1.0.18",
     "@dataverse/xmtp-client-toolkit": "^1.0.18",
-    "@dataverse/lens-client-toolkit": "^1.0.18",
+    "@dataverse/lens-client-toolkit": "*",
+    "@dataverse/snapshot-client-toolkit": "*",
     "@livepeer/react": "^2.5.5",
     "buffer": "^6.0.3",
     "chalk": "^4.1.2",
