chore: change dataverse.config

--- a/dataverse.config.ts.example
+++ b/dataverse.config.ts.example
@@ -57,7 +57,7 @@ export const config = {
     },
     {
       isPublicDomain: false, 
-      schemaName: "lenspost.graphql",
+      schemaName: "lenspublication.graphql",
       encryptable: [],
     },
     {
