--- a/package.json
+++ b/package.json
@@ -6,11 +6,9 @@
   ],
   "type": "module",
   "scripts": {
-    "build:scripts": "npx tsc -p tsconfig.node.json",
+    "build": "lerna run build && pnpm build:src",
     "build:src": "vite build",
-    "build": "lerna run build && pnpm build:scripts && pnpm build:src",
     "build:model-parser": "lerna run build --scope=@dataverse/model-parser",
-    "publish": "pnpm build:scripts && env-cmd -f .env node --experimental-specifier-resolution=node ./scripts/build/scripts/createDapp.js",
     "dev": "vite",
     "preview": "vite preview"
   },
