--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "forceConsistentCasingInFileNames": true,
     "importHelpers": false,
     "incremental": false,
-    "lib": ["ES2020"],
+    "lib": ["ES2020", "DOM", "DOM.Iterable", "ESNext"],
     "module": "ES2020",
     "target": "ES2020",
     "moduleResolution": "Node",
